Fix dark mode text

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
 
       <div class="duration-100 ease-linear mt-2 flex flex-wrap items-center bg-white transition dark:bg-slate-900">
         <button class="m-2 rounded-2xl border bg-blue-600 p-1 px-2 text-white shadow-sm">Go to Project</button>
-        <button class="m-2 rounded-2xl border-2 border-blue-600 p-1 px-2 text-blue-600 shadow-sm">Github</button>
+        <button class="m-2 rounded-2xl border-2 border-blue-600 p-1 px-2 text-blue-600 shadow-sm dark:text-white transition duration-100 linear">Github</button>
       </div>
     </div>
     <button
