--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
       </div>
 
       <div class="flex flex-wrap items-center rounded-b-xl border-t-2 bg-white">
-        <button class="m-2 rounded-2xl border bg-blue-600 p-1 px-2 text-white shadow-sm">Go to Project</button>
+        <button class="m-2 rounded-2xl border bg-blue-600 p-1 px-2 text-white shadow-sm hover:word-spacing-4">Go to Project</button>
         <button class="m-2 rounded-2xl border-2 border-blue-600 p-1 px-2 text-blue-600 shadow-sm">Github</button>
       </div>
     </div>
