--- a/src/index.html
+++ b/src/index.html
@@ -34,5 +34,12 @@
         </button>
       </div>
     </div>
+    <a
+      target="_blank"
+      href="https://github.com/tailwindlabs/tailwindcss/blob/master/stubs/defaultConfig.stub.js"
+      class="fixed top-1/2 right-0 -translate-x-1/2 rounded-full bg-blue-400 px-4 py-2 shadow-md"
+    >
+      +
+    </a>
   </body>
 </html>
