--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
     </div>
     <input
       type="text"
-      class="border-4 border-black text-center outline-2 focus:text-green-200"
+      class="text-center focus:text-green-600"
       placeholder="Input text..."
     />
     <h1>Hello</h1>
