--- a/src/index.html
+++ b/src/index.html
@@ -27,10 +27,21 @@
       </div>
 
       <div class="flex flex-wrap items-center rounded-b-xl border-t-2 bg-white">
-        <button class="m-2 rounded-2xl border bg-blue-600 p-1 px-2 text-white shadow-sm hover:word-spacing-4">Go to Project</button>
+        <button class="m-2 rounded-2xl border bg-blue-600 p-1 px-2 text-white shadow-sm hover:word-spacing-4">
+          Go to Project
+        </button>
         <button class="m-2 rounded-2xl border-2 border-blue-600 p-1 px-2 text-blue-600 shadow-sm">Github</button>
       </div>
     </div>
-     <div class="w-1/3 mx-auto"><iframe class="w-full aspect-[4/3]" src="https://www.youtube.com/embed/hhmSip1lMN4" title="Sống Như Những Đóa Hoa - Cover by Hibiki Du Ca" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+    <div class="mx-auto w-1/3">
+      <iframe
+        class="aspect-[4/3] w-full"
+        src="https://www.youtube.com/embed/hhmSip1lMN4"
+        title="Sống Như Những Đóa Hoa - Cover by Hibiki Du Ca"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+    </div>
   </body>
 </html>
