--- a/src/index.html
+++ b/src/index.html
@@ -1,48 +1,44 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Tailwind seminar</title>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="./assets/tailwind.output.css" />
-  </head>
 
-  <body class="flex h-screen w-screen flex-col items-center justify-around">
-    <div class="relative w-96 cursor-pointer rounded-xl border-2 shadow-lg">
-      <div class="flex h-28 items-center justify-center rounded-xl bg-blue-700">
-        <h1 class="right absolute mx-auto text-center text-2xl text-white">Image goes here</h1>
-      </div>
+<head>
+  <title>Tailwind seminar</title>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="./assets/tailwind.output.css" />
+</head>
 
-      <div class="border-b-2 p-2">
-        <div class="mb-2">
-          <h6>Thành viên:</h6>
-          <ul class="ml-4 list-disc">
-            <li>Nguyễn Thanh Nhàn</li>
-            <li>Bùi Công Tri</li>
-            <li>Lê Khánh Châu</li>
-            <li>Đinh Thị Ánh Nguyệt</li>
-            <li>Thới Đức Luận</li>
-          </ul>
-        </div>
-        <span class="hashtag"> #Javascript </span>
-      </div>
-
-      <div class="flex flex-wrap items-center rounded-b-xl border-t-2 bg-white">
-        <button class="m-2 rounded-2xl border bg-blue-600 p-1 px-2 text-white shadow-sm">Go to Project</button>
-        <button class="m-2 rounded-2xl border-2 border-blue-600 p-1 px-2 text-blue-600 shadow-sm">Github</button>
-      </div>
+<body class="flex h-screen w-screen flex-col items-center justify-around">
+  <div class="relative w-96 cursor-pointer rounded-xl border-2 shadow-lg">
+    <div class="flex h-28 items-center justify-center rounded-xl bg-blue-700">
+      <h1 class="right absolute mx-auto text-center text-2xl text-white">Image goes here</h1>
     </div>
-    <input
-      type="text"
-      class="text-center focus:text-green-600"
-      placeholder="Input text..."
-    />
-    <h1>Hello</h1>
-    <script>
-      const header = () => ['text-bold', 'text-6xl', 'text-red-500', 'hover:text-blue-300', 'hover:cursor-pointer']
 
-      Object.values(document.getElementsByTagName('h1')).forEach((tag) => {
-        tag.classList.add(...header())
-      })
-    </script>
-  </body>
+    <div class="border-b-2 p-2">
+      <div class="mb-2">
+        <h6>Thành viên:</h6>
+        <ul class="ml-4 list-disc">
+          <li>Nguyễn Thanh Nhàn</li>
+          <li>Bùi Công Tri</li>
+          <li>Đặng Duy Bình</li>
+        </ul>
+      </div>
+      <span class="hashtag"> #Javascript </span>
+    </div>
+
+    <div class="flex flex-wrap items-center rounded-b-xl border-t-2 bg-white">
+      <button class="m-2 rounded-2xl border bg-blue-600 p-1 px-2 text-white shadow-sm">Go to Project</button>
+      <button class="m-2 rounded-2xl border-2 border-blue-600 p-1 px-2 text-blue-600 shadow-sm">Github</button>
+    </div>
+  </div>
+  <input type="text" class="text-center focus:text-green-600" placeholder="Input text..." />
+  <h1>Hello</h1>
+  <script>
+    const header = () => ['text-bold', 'text-6xl', 'text-red-500', 'hover:text-blue-300', 'hover:cursor-pointer']
+
+    Object.values(document.getElementsByTagName('h1')).forEach((tag) => {
+      tag.classList.add(...header())
+    })
+  </script>
+</body>
+
 </html>
