change group members

--- a/src/index.html
+++ b/src/index.html
@@ -25,13 +25,7 @@
                   Bùi Công Tri
                 </li>
                 <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Lê Khánh Châu
-                </li>
-                <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Đinh Thị Ánh Nguyệt
-                </li>
-                <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Thới Đức Luận
+                  Đặng Duy Bình
                 </li>
               </ul>
             </div>
@@ -45,13 +39,7 @@
                   Bùi Công Tri
                 </li>
                 <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Lê Khánh Châu
-                </li>
-                <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Đinh Thị Ánh Nguyệt
-                </li>
-                <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Thới Đức Luận
+                  Đặng Duy Bình
                 </li>
               </ul>
             </div>
@@ -65,13 +53,7 @@
                   Bùi Công Tri
                 </li>
                 <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Lê Khánh Châu
-                </li>
-                <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Đinh Thị Ánh Nguyệt
-                </li>
-                <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Thới Đức Luận
+                  Đặng Duy Bình
                 </li>
               </ul>
             </div>
@@ -107,48 +89,7 @@
                   Bùi Công Tri
                 </li>
                 <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Lê Khánh Châu
-                </li>
-                <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Đinh Thị Ánh Nguyệt
-                </li>
-                <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Thới Đức Luận
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-
-        <div class="flex flex-wrap items-center rounded-b-xl border-t-2 bg-white">
-          <button class="change-btn m-2 rounded-2xl border-2 border-blue-600 p-1 px-2 text-blue-600 shadow-sm">
-            Change to flex layout
-          </button>
-        </div>
-      </div>
-      <div class="container relative  mx-auto cursor-pointer rounded-xl border-2 shadow-lg">
-        <div class="flex h-28 items-center justify-center rounded-xl bg-blue-700">
-          <h1 class="absolute mx-auto text-center text-2xl text-white">Image goes here</h1>
-        </div>
-        <div class="w-96 border-b-2 p-2">
-          <div class="flex w-96 flex-nowrap overflow-x-auto">
-            <div class="mb-2 min-w-full basis-full">
-              <h6>Thành viên:</h6>
-              <ul class="ml-4 list-inside list-disc">
-                <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Nguyễn Thanh Nhàn
-                </li>
-                <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Bùi Công Tri
-                </li>
-                <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Lê Khánh Châu
-                </li>
-                <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Đinh Thị Ánh Nguyệt
-                </li>
-                <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Thới Đức Luận
+                  Đặng Duy Bình
                 </li>
               </ul>
             </div>
@@ -177,13 +118,7 @@
                   Bùi Công Tri
                 </li>
                 <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Lê Khánh Châu
-                </li>
-                <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Đinh Thị Ánh Nguyệt
-                </li>
-                <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Thới Đức Luận
+                  Đặng Duy Bình
                 </li>
               </ul>
             </div>
@@ -212,48 +147,7 @@
                   Bùi Công Tri
                 </li>
                 <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Lê Khánh Châu
-                </li>
-                <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Đinh Thị Ánh Nguyệt
-                </li>
-                <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Thới Đức Luận
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-
-        <div class="flex flex-wrap items-center rounded-b-xl border-t-2 bg-white">
-          <button class="change-btn m-2 rounded-2xl border-2 border-blue-600 p-1 px-2 text-blue-600 shadow-sm">
-            Change to flex layout
-          </button>
-        </div>
-      </div>
-      <div class="container col-start-2 col-end-4 row-span-2  crelative mx-auto cursor-pointer rounded-xl border-2 shadow-lg">
-        <div class="flex h-28 items-center justify-center rounded-xl bg-blue-700">
-          <h1 class="absolute mx-auto text-center text-2xl text-white">Image goes here</h1>
-        </div>
-        <div class="w-96 border-b-2 p-2">
-          <div class="flex w-96 flex-nowrap overflow-x-auto">
-            <div class="mb-2 min-w-full basis-full">
-              <h6>Thành viên:</h6>
-              <ul class="ml-4 list-inside list-disc">
-                <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Nguyễn Thanh Nhàn
-                </li>
-                <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Bùi Công Tri
-                </li>
-                <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Lê Khánh Châu
-                </li>
-                <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Đinh Thị Ánh Nguyệt
-                </li>
-                <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Thới Đức Luận
+                  Đặng Duy Bình
                 </li>
               </ul>
             </div>
@@ -282,13 +176,38 @@
                   Bùi Công Tri
                 </li>
                 <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Lê Khánh Châu
+                  Đặng Duy Bình
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex flex-wrap items-center rounded-b-xl border-t-2 bg-white">
+          <button class="change-btn m-2 rounded-2xl border-2 border-blue-600 p-1 px-2 text-blue-600 shadow-sm">
+            Change to flex layout
+          </button>
+        </div>
+      </div>
+      <div
+        class="crelative container col-start-2 col-end-4 row-span-2 mx-auto cursor-pointer rounded-xl border-2 shadow-lg"
+      >
+        <div class="flex h-28 items-center justify-center rounded-xl bg-blue-700">
+          <h1 class="absolute mx-auto text-center text-2xl text-white">Image goes here</h1>
+        </div>
+        <div class="w-96 border-b-2 p-2">
+          <div class="flex w-96 flex-nowrap overflow-x-auto">
+            <div class="mb-2 min-w-full basis-full">
+              <h6>Thành viên:</h6>
+              <ul class="ml-4 list-inside list-disc">
+                <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
+                  Nguyễn Thanh Nhàn
                 </li>
                 <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Đinh Thị Ánh Nguyệt
+                  Bùi Công Tri
                 </li>
                 <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Thới Đức Luận
+                  Đặng Duy Bình
                 </li>
               </ul>
             </div>
@@ -317,13 +236,36 @@
                   Bùi Công Tri
                 </li>
                 <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Lê Khánh Châu
+                  Đặng Duy Bình
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex flex-wrap items-center rounded-b-xl border-t-2 bg-white">
+          <button class="change-btn m-2 rounded-2xl border-2 border-blue-600 p-1 px-2 text-blue-600 shadow-sm">
+            Change to flex layout
+          </button>
+        </div>
+      </div>
+      <div class="container relative mx-auto cursor-pointer rounded-xl border-2 shadow-lg">
+        <div class="flex h-28 items-center justify-center rounded-xl bg-blue-700">
+          <h1 class="absolute mx-auto text-center text-2xl text-white">Image goes here</h1>
+        </div>
+        <div class="w-96 border-b-2 p-2">
+          <div class="flex w-96 flex-nowrap overflow-x-auto">
+            <div class="mb-2 min-w-full basis-full">
+              <h6>Thành viên:</h6>
+              <ul class="ml-4 list-inside list-disc">
+                <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
+                  Nguyễn Thanh Nhàn
                 </li>
                 <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Đinh Thị Ánh Nguyệt
+                  Bùi Công Tri
                 </li>
                 <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Thới Đức Luận
+                  Đặng Duy Bình
                 </li>
               </ul>
             </div>
@@ -352,13 +294,7 @@
                   Bùi Công Tri
                 </li>
                 <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Lê Khánh Châu
-                </li>
-                <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Đinh Thị Ánh Nguyệt
-                </li>
-                <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Thới Đức Luận
+                  Đặng Duy Bình
                 </li>
               </ul>
             </div>
@@ -387,13 +323,7 @@
                   Bùi Công Tri
                 </li>
                 <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Lê Khánh Châu
-                </li>
-                <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Đinh Thị Ánh Nguyệt
-                </li>
-                <li class="list-item transition-all duration-200 ease-in hover:tracking-wide hover:text-sky-400">
-                  Thới Đức Luận
+                  Đặng Duy Bình
                 </li>
               </ul>
             </div>
@@ -418,13 +348,17 @@
         if (layout) {
           flexLayout.classList.add('hidden')
           gridLayout.classList.remove('hidden')
-          btnChanges.forEach(ele => {ele.textContent = 'Change to flex layout'})
+          btnChanges.forEach((ele) => {
+            ele.textContent = 'Change to flex layout'
+          })
           layout = false
         } else {
           gridLayout.classList.add('hidden')
           flexLayout.classList.remove('hidden')
           flexLayout.classList.add('block')
-          btnChanges.forEach(ele => {ele.textContent = 'Change to grid layout'})
+          btnChanges.forEach((ele) => {
+            ele.textContent = 'Change to grid layout'
+          })
           layout = true
         }
       }
