change group members

--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,11 @@
         <div class="mb-2">
           <h6 class="text-center">Thành viên:</h6>
           <ul class="ml-4 list-disc">
-            <li class="text-red-400 text-xl tracking-widest">Nguyễn Thanh Nhàn</li>
-            <li class="text-blue-400 text-lg tracking-tight">Bùi Công Tri</li>
-            <li class="text-sky-400 text-md tracking-wide">Lê Khánh Châu</li>
-            <li class="text-cyan-300 text-sm tracking-wider">Đinh Thị Ánh Nguyệt</li>
-            <li class="text-yellow-400 text-xs">Thới Đức Luận</li>
+            <li class="text-xl tracking-widest text-red-400">Nguyễn Thanh Nhàn</li>
+            <li class="text-lg tracking-tight text-blue-400">Bùi Công Tri</li>
+            <li class="text-md tracking-wide text-sky-400">Đặng Duy Bình</li>
+            <li class="text-sm tracking-wider text-cyan-300">Nguyễn Thanh Nhàn</li>
+            <li class="text-xs text-yellow-400">Bùi Công Tri</li>
           </ul>
         </div>
         <span class="hashtag"> #Javascript </span>
