--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,7 @@
           <ul class="ml-4 list-disc">
             <li>Nguyễn Thanh Nhàn</li>
             <li>Bùi Công Tri</li>
-            <li>Lê Khánh Châu</li>
-            <li>Đinh Thị Ánh Nguyệt</li>
-            <li>Thới Đức Luận</li>
+            <li>Đặng Duy Bình</li>
           </ul>
         </div>
         <span class="hashtag"> #Javascript </span>
