change group members

--- a/src/index.html
+++ b/src/index.html
@@ -12,15 +12,16 @@
         <h1 class="right absolute mx-auto text-center text-2xl text-white">Image goes here</h1>
       </div>
 
-      <div class="border-b-2 p-2 h-32 overflow-y-scroll">
+      <div class="h-32 overflow-y-scroll border-b-2 p-2">
         <div class="mb-2">
           <h6>Thành viên:</h6>
           <ul class="ml-4 list-disc">
             <li>Nguyễn Thanh Nhàn</li>
             <li>Bùi Công Tri</li>
-            <li>Lê Khánh Châu</li>
-            <li>Đinh Thị Ánh Nguyệt</li>
-            <li>Thới Đức Luận</li>
+            <li>Đặng Duy Bình</li>
+            <li>Nguyễn Thanh Nhàn</li>
+            <li>Bùi Công Tri</li>
+            <li>Đặng Duy Bình</li>
           </ul>
         </div>
         <span class="hashtag"> #Javascript </span>
