change group members

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="./assets/tailwind.output.css" />
   </head>
+
   <body class="h-screen w-screen">
     <div class="relative mx-auto my-auto w-96 cursor-pointer items-center rounded-xl border-2 shadow-lg">
       <div class="flex h-28 items-center justify-center rounded-xl bg-blue-700">
@@ -17,9 +18,7 @@
           <ul class="ml-4 list-disc">
             <li>Nguyễn Thanh Nhàn</li>
             <li>Bùi Công Tri</li>
-            <li>Lê Khánh Châu</li>
-            <li>Đinh Thị Ánh Nguyệt</li>
-            <li>Thới Đức Luận</li>
+            <li>Đặng Duy Bình</li>
           </ul>
         </div>
         <span class="hashtag"> #Javascript </span>
@@ -36,7 +35,7 @@
     </div>
     <a
       target="_blank"
-      href="https://github.com/tailwindlabs/tailwindcss/blob/master/stubs/defaultConfig.stub.js"
+      href="https://github.com/tailwindlabs/tailwindcss/blob/master/stubs/config.full.js"
       class="fixed top-1/2 right-0 -translate-x-1/2 rounded-full bg-blue-400 px-4 py-2 shadow-md"
     >
       +
