change group members

--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,9 @@
   </head>
 
   <body class="h-screen w-screen">
-    <div class="relative mx-auto my-auto w-96 cursor-pointer items-center rounded-xl border-2 shadow-lg">
-      <div class="flex h-28 items-center justify-center rounded-xl bg-blue-700">
-        <h1 class="right absolute mx-auto text-center text-2xl text-white">Image goes here</h1>
+    <div class="mx-auto my-auto w-96 cursor-pointer rounded-xl border-2 shadow-lg relative items-center">
+      <div class="h-28 rounded-xl bg-blue-700 flex items-center justify-center">
+        <h1 class="right mx-auto text-2xl text-white absolute text-center">Image goes here</h1>
       </div>
       <div class="border-b-2 p-2">
         <div class="mb-2">
@@ -17,15 +17,13 @@
           <ul class="ml-4 list-disc">
             <li>Nguyễn Thanh Nhàn</li>
             <li>Bùi Công Tri</li>
-            <li>Lê Khánh Châu</li>
-            <li>Đinh Thị Ánh Nguyệt</li>
-            <li>Thới Đức Luận</li>
+            <li>Đặng Duy Bình</li>
           </ul>
         </div>
         <span class="hashtag"> #Javascript </span>
       </div>
 
-      <div class="flex flex-wrap items-center rounded-b-xl border-t-2 bg-white">
+      <div class="rounded-b-xl border-t-2 bg-white flex flex-wrap items-center">
         <button class="m-2 rounded-2xl border bg-blue-600 p-1 px-2 shadow-sm text-tahiti-400">Go to Project</button>
         <button class="m-2 rounded-2xl border-2 border-blue-600 p-1 px-2 text-blue-600 shadow-sm">Github</button>
       </div>
